Set bInitServerOnClient=true by default since it's required for Steam lobbies.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,6 +25,7 @@ bEnabled=True
 [OnlineSubsystemSteam]
 bEnabled=True
 SteamDevAppId=480
+bInitServerOnClient=true
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Menu.Menu
