--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,3 +31,18 @@ bInitServerOnClient=true
 EditorStartupMap=/Game/Maps/Menu.Menu
 GameDefaultMap=/Game/Maps/Menu.Menu
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=6FB52BCE4C272BAFD4911C8DB1339A06
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
