Switch to use SteamSockets over legacy SteamNetDriver to fix connection issues with Steam in UE 5.6

--- a/LobbyistExample.uproject
+++ b/LobbyistExample.uproject
@@ -12,6 +12,10 @@
 		{
 			"Name": "OnlineSubsystemSteam",
 			"Enabled": true
+		},
+		{
+			"Name": "SteamSockets",
+			"Enabled": true
 		}
 	]
 }
